--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,15 @@ permalink: /teaching/
 author_profile: true
 ---
 
+<h2> Course Instructor </h2>
+
+## Teaching Assistant
+
+
+<!--
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
